--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -3,17 +3,61 @@
 .card{
   &__container{
     background-color: $whiteVulpix;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    box-shadow: 0 2px 25px 2px $grayOnix;
   }
 
   &__image{
-    background-color: pink;
+    width: 100px;
+    height: 100px;
+
+    &-wrapper{
+      background-color: $grayMinccino;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+  }
+
+  &__number{
+    width: 50px;
+    height: 20px;
+    background-color: $grayOnix;
+    text-align: center;
+    font-size: 12px;
+    align-self: flex-start;
+  }
+
+  &__info-wrapper{
+    padding: 10px;
+    width: 100%;
   }
 
   &__name{
-    background-color: blue;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
   }
 
   &__types{
-    background-color: green;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    font-size: 12px;
+
+    &-type{
+      border: 1px solid $blackNecrozma;
+      border-radius: 5px;
+      margin-right: 5px;
+      padding: 2px;
+      text-transform: uppercase;
+    }
   }
 }
