--- a/src/index.scss
+++ b/src/index.scss
@@ -6,5 +6,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  text-transform: capitalize;
   font-family: $font-primary;
 }
