--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,8 +4,11 @@ $font-primary: 'Roboto', sans-serif;
 //COLOURS
 $whiteVulpix: #ffffff;
 $blackNecrozma: #000000;
+$grayMinccino: #e9e5e5;
+$grayOnix: #b4b2b2;
 $yellowPikachu: #ffe600;
 $redOricorio: #ff0000;
+
 
 // MEDIA QUERIES
 $tablet: 768px ;
