--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -1,34 +1,28 @@
 @import "../../scss/variables.scss";
+@import "../../scss/mixins.scss";
 
 .card{
   &__container{
+    @include boxSize(unset, 200px);
+    @include flexContainer(flex, column, center, center);
     background-color: $whiteVulpix;
     margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
     box-shadow: 0 2px 25px 2px $grayOnix;
   }
 
   &__image{
-    width: 100px;
-    height: 100px;
+    @include boxSize(100px, 100px);
 
     &-wrapper{
+      @include flexContainer(flex, column, unset, center);
+      @include boxSize(unset, 100%);
       background-color: $grayMinccino;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
   }
 
   &__number{
-    width: 50px;
-    height: 20px;
+    @include boxSize(20px, 50px);
     background-color: $grayOnix;
     text-align: center;
     font-size: 12px;
@@ -36,8 +30,8 @@
   }
 
   &__info-wrapper{
+    @include boxSize(unset, 100%);
     padding: 10px;
-    width: 100%;
   }
 
   &__name{
@@ -47,8 +41,7 @@
   }
 
   &__types{
-    display: flex;
-    flex-direction: row;
+    @include flexContainer(flex, row, unset, unset);
     width: 100%;
     font-size: 12px;
 
