--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,10 +1,9 @@
 @import "../../scss/variables.scss";
+@import "../../scss/mixins.scss";
 
 .app__container{
-    background-color: $yellowPikachu;
-    display: flex;
-    justify-content: center;
-  }
+  @include flexContainer(flex, unset, center, unset);
+}
 
 .main__container{
     margin: 40px;
@@ -13,8 +12,7 @@
 
 .header{
   &__container{
-    display:flex;
-    justify-content: space-between;
+    @include flexContainer(flex, unset, space-between, unset);
     position: fixed;
     width: 100%;
   }
@@ -38,28 +36,17 @@
 
 .footer{
   &__container{
-    display:flex;
-    justify-content: space-between;
+    @include flexContainer(flex, unset, space-between, unset);
+    flex: auto;
     position: fixed;
     width: 100%;
+    bottom: 0;
+    left: 0;
   }
 
   &__circle{
-    &-left{
-      left: 0;
-      bottom: 0;
-      border-radius: 0 100% 0 0;
-      background-color: $redOricorio;
-      width: 45px;
-      height: 45px;
-    }
-    &-right{
-      right: 0;
-      bottom: 0;
-      border-radius: 100% 0 0 0;
-      background-color: $redOricorio;
-      width: 45px;
-      height: 45px;
-    }
+    @include boxSize(45px, 45px);
+    border-radius: 0 100% 0 0;
+    background-color: $redOricorio;
   }
 }
