Create router for Homepage and Detail components

--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -6,8 +6,8 @@
     @include boxSize(unset, 175px);
     @include flexContainer(flex, column, center, center);
     background-color: $whiteVulpix;
-    margin: 20px;
-    box-shadow: 0 2px 25px 2px $grayOnix;
+    margin: 20px auto;
+    box-shadow: 0 2px 25px 2px $yellowRaichu;
     border-radius: 5px;
   }
 
