--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,9 +7,10 @@ $blackNecrozma: #000000;
 $grayMinccino: #e9e5e5;
 $grayOnix: #b4b2b2;
 $yellowPikachu: #ffe600;
+$yellowRaichu: #dbc602;
 $redOricorio: #ff0000;
 
 
 // MEDIA QUERIES
-$tablet: 768px ;
+$tablet: 768px;
 $desktop: 1400px;
