--- a/src/components/Homepage/styles.scss
+++ b/src/components/Homepage/styles.scss
@@ -1,6 +1,15 @@
 @import "../../scss/variables.scss";
 @import "../../scss/mixins.scss";
 
+.page__container{
+  @include flexContainer(flex, unset, center, unset);
+}
+
+.main__container{
+  margin: 0 40px;
+  height: 100%;
+}
+
 .header{
   &__container{
     @include flexContainer(flex, unset, space-between, unset);
