--- a/src/components/Homepage/styles.scss
+++ b/src/components/Homepage/styles.scss
@@ -2,61 +2,11 @@
 @import "../../scss/mixins.scss";
 
 .page__container{
-  @include flexContainer(flex, unset, center, unset);
+  @include flexContainer(flex, unset, center, center);
+  align-self: flex-start;
 }
 
 .main__container{
   margin: 40px;
   height: 100%;
-}
-
-.header{
-  &__container{
-    @include flexContainer(flex, unset, space-between, unset);
-    position: fixed;
-    width: 100%;
-  }
-
-  &__triangle{
-    &-left{
-      border-color: $blackNecrozma transparent transparent $blackNecrozma;
-      border-width: 30px;
-      border-style: solid;
-    }
-
-    &-right{
-      border-color: $blackNecrozma $blackNecrozma transparent transparent;
-      border-width: 30px;
-      border-style: solid;
-    }
-  }
-}
-
-.footer{
-  &__container{
-    @include flexContainer(flex, unset, space-between, unset);
-    flex: auto;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-  }
-
-  &__circle{
-    &-left{
-      @include boxSize(45px, 45px);
-      border-radius: 0 100% 0 0;
-      background-color: $redOricorio;
-      left: 0;
-      bottom: 0;
-    }
-
-    &-right{
-      @include boxSize(45px, 45px);
-      border-radius: 100% 0 0 0;
-      background-color: $redOricorio;
-      right: 0;
-      bottom: 0;
-    }
-  }
 }
