--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -27,6 +27,8 @@
     text-align: center;
     font-size: 12px;
     align-self: flex-start;
+    border-radius: 0 5px 0 0;
+    padding: 4px 0;
   }
 
   &__info-wrapper{
