--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -15,3 +15,10 @@
   box-shadow: 0 2px 25px 2px $yellowRaichu;
   border-radius: 5px;
 }
+
+@mixin type {
+  border: 1px solid $blackNecrozma;
+  border-radius: 5px;
+  margin-right: 5px;
+  padding: 2px;
+}
