--- a/src/components/Detail/styles.scss
+++ b/src/components/Detail/styles.scss
@@ -12,6 +12,7 @@
     max-width: 450px;
     background-color: $whiteVulpix;
     border-radius: 5px;
+    margin-bottom: 20px;
 
     @media all and (min-width: $tablet) {
       min-width: 450px;
@@ -33,8 +34,8 @@
     font-size: 24px;
   }
 
-  &__image{
-    &-wrapper{
+  &__image {
+    &-wrapper {
       @include flexContainer(flex, row nowrap, center, center);
       @include boxSize(unset, 100%);
       padding: 10px;
@@ -43,6 +44,7 @@
 
   &__profile {
     @include flexContainer(flex, row nowrap, flex-start, center);
+    margin: auto 0;
     &-title {
       @include boxSize(unset, 100%);
       background-color: $grayOnix;
@@ -60,10 +62,10 @@
 
     &-abilities {
       font-weight: bold;
+      padding-left: 30px;
       &-list {
         @include flexContainer(flex, row, center, center);
         width: 100%;
-        padding: 10px;
         font-weight: normal;
       }
       &-ability {
